--- a/index.html
+++ b/index.html
@@ -493,8 +493,7 @@
         <h2 class="h6 m-0"><i class="bi bi-clipboard2-pulse me-2"></i>Program PEKA B40 bersama NADI</h2>
         <div class="d-flex gap-2">
           <button id="btnNadiExportCsv" class="btn btn-sm btn-outline-success"><i class="bi bi-filetype-csv me-1"></i>Export to CSV</button>
-          <button id="btnMonitorAll" class="btn btn-outline-primary" class="d-none">Monitor Semua (Live)</button>
-        </div>
+</div>
       </div>
       
       <!-- Summary Cards -->
@@ -4240,7 +4239,7 @@ function useSelectedSession(){
     const tcaStaff = row.querySelector('.nadi-staff');
     const vDate    = row.querySelector('.nadi-voucher-date');
 
-    const onTCA = !!( (layak && layak.checked) || (vchr && vchr.checked) );
+    const onTCA = !!(layak && layak.checked);
     setEnabled(tcaDate, onTCA);
     setEnabled(tcaTime, onTCA);
     setEnabled(tcaStaff, onTCA);
@@ -4248,7 +4247,8 @@ function useSelectedSession(){
 
     // Update main button label
     const btn = row.querySelector('.nadi-daftar');
-    if (btn){
+    
+      if (btn) btn.disabled = !(layak && layak.checked);if (btn){
       if (vchr && vchr.checked) btn.textContent = 'Daftar TCA';
       else btn.textContent = 'Daftar';
     }
