--- a/index.html
+++ b/index.html
@@ -2511,27 +2511,61 @@ function addNadiRow(){
       tcaDate.disabled = true;
       tcaTime.disabled = true;
       staff.disabled = true;
-      btnDaftar.disabled = true;
+      const voucher = row.querySelector('input[name="voucher"]');
+      // Jika TCA voucher dicentang, benarkan 'Daftar' (guna laluan voucher)
+      btnDaftar.disabled = (voucher && voucher.checked) ? false : true;
     }
     updateNadiSummary();
   });
 
   // Daftar
-  
+  btnDaftar.addEventListener('click', async () => {
+    const nama = row.querySelector('.nadi-nama').value.trim();
+    const ic = row.querySelector('.nadi-ic').value.trim();
+    const tel = row.querySelector('.nadi-tel').value.trim();
+    const alamat = row.querySelector('.nadi-alamat').value.trim();
+    const date = tcaDate.value;
+    const time = tcaTime.value;
+    const staffName = staff.value.trim();
+    const voucherEl = row.querySelector('input[name="voucher"]');
+    const voucherDate = row.querySelector('input[name="voucherDate"]');
+    const isVoucher = !!(voucherEl && voucherEl.checked);
 
-btnDaftar.addEventListener('click', async () => {
-  const nama = row.querySelector('.nadi-nama').value.trim();
-  const ic   = row.querySelector('.nadi-ic').value.trim();
-  const tel  = row.querySelector('.nadi-tel').value.trim();
-  const alamat = row.querySelector('.nadi-alamat').value.trim();
+    // Validasi mengikut mod:
+    if (isVoucher) {
+      const vDate = (voucherDate && voucherDate.value) || '';
+      if (!nama || (!ic && !tel)) { toast('Ralat', 'Isi sekurang-kurangnya Nama dan IC/Telefon', 'danger'); return; }
+      if (!vDate) { toast('Ralat', 'Sila pilih Tarikh TCA (Voucher)', 'danger'); return; }
+      const masa = '09:00';
+      const staffAuto = (window.STAFF_EMAIL || staffName || '').trim();
+      const alamatWithRemark = (alamat ? alamat + ' — ' : '') + 'Saringan kesihatan voucher';
+      try {
+        const res = await postForm({
+          action: 'daftarPesakit',
+          namaPesakit: nama || 'Pesakit Voucher',
+          noIC: ic || '',
+          noTelefon: tel || '',
+          alamat: alamatWithRemark,
+          tarikhTCA: vDate,
+          masaTCA: masa,
+          namaStaff: staffAuto
+        }, { msg: 'Mendaftar pesakit (voucher)...' });
+        if (res.status === 'success') {
+          toast('Berjaya', 'Pesakit (voucher) berjaya didaftarkan', 'success');
+          updateNadiRowData(row);
+        } else { throw new Error(res.message || 'Gagal mendaftar pesakit (voucher)'); }
+      } catch(e) {
+        toast('Ralat', e.message, 'danger');
+      }
+      return;
+    }
 
-  const vchr  = row.querySelector('.nadi-voucher');
-  const vDate = row.querySelector('.nadi-voucher-date');
+    // Mod biasa (Layak): perlukan tarikh/masa/staff
+    if (!nama || !ic || !tel || !date || !time || !staffName) {
+      toast('Ralat', 'Sila isi semua maklumat', 'danger');
+      return;
+    }
 
-  // Laluan VOUCHER
-  if (vchr && vchr.checked) {
-    if (!nama || !ic || !tel) { toast('Ralat','Sila isi Nama, IC & Telefon','danger'); return; }
-    if (!vDate || !vDate.value) { toast('Ralat','Sila isi Tarikh TCA (Voucher)','danger'); return; }
     try {
       const res = await postForm({
         action: 'daftarPesakit',
@@ -2539,58 +2573,22 @@ btnDaftar.addEventListener('click', async () => {
         noIC: ic,
         noTelefon: tel,
         alamat: alamat,
-        tarikhTCA: vDate.value,
-        masaTCA: '09:00',
-        namaStaff: (typeof STAFF_EMAIL !== 'undefined' && STAFF_EMAIL) ? STAFF_EMAIL : 'SYSTEM'
-      }, { msg: 'Mendaftar pesakit (voucher)…' });
+        tarikhTCA: date,
+        masaTCA: time,
+        namaStaff: staffName
+      }, { msg: 'Mendaftar pesakit...' });
+
       if (res.status === 'success') {
-        toast('Berjaya', 'Pesakit berjaya didaftarkan (voucher)', 'success');
+        toast('Berjaya', 'Pesakit berjaya didaftarkan', 'success');
         updateNadiRowData(row);
       } else {
-        throw new Error(res.message || 'Gagal mendaftar pesakit (voucher)');
+        throw new Error(res.message || 'Gagal mendaftar pesakit');
       }
     } catch (e) {
       toast('Ralat', e.message, 'danger');
     }
-    return;
-  }
-
-  // Laluan BIASA (Layak)
-  const date = tcaDate.value;
-  const time = tcaTime.value;
-  const staffName = staff.value.trim();
-
-  if (!nama || !ic || !tel || !date || !time || !staffName) {
-    toast('Ralat', 'Sila isi semua maklumat', 'danger');
-    return;
-  }
-
-  try {
-    const res = await postForm({
-      action: 'daftarPesakit',
-      namaPesakit: nama,
-      noIC: ic,
-      noTelefon: tel,
-      alamat: alamat,
-      tarikhTCA: date,
-      masaTCA: time,
-      namaStaff: staffName
-    }, { msg: 'Mendaftar pesakit...' });
-
-    if (res.status === 'success') {
-      toast('Berjaya', 'Pesakit berjaya didaftarkan', 'success');
-      updateNadiRowData(row);
-    } else {
-      throw new Error(res.message || 'Gagal mendaftar pesakit');
-    }
-  } catch (e) {
-    toast('Ralat', e.message, 'danger');
-  }
-});
-
-
-
-  // WA report (preview) — perhatikan: pembolehubah `data` DITAKRIF di dalam handler
+  });
+// WA report (preview) — perhatikan: pembolehubah `data` DITAKRIF di dalam handler
   row.querySelector('.nadi-wa').addEventListener('click', async () => {
     try {
       const data = {
@@ -3140,10 +3138,12 @@ function mergeLiveRowsIntoUI(items){
         tcaDate.disabled = false; tcaTime.disabled = false; staff.disabled = false; btnDaftar.disabled = false;
       } else if (takLayak.checked){
         layak.checked = false;
-        tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  btnDaftar.disabled = true;
+        tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  const voucher = row.querySelector('input[name="voucher"]');
+        btnDaftar.disabled = (voucher && voucher.checked) ? false : true;
       } else {
         // tiada pilihan → disable TCA
-        tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  btnDaftar.disabled = true;
+        tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  const voucher = row.querySelector('input[name="voucher"]');
+        btnDaftar.disabled = (voucher && voucher.checked) ? false : true;
       }
     }
   });
@@ -3967,12 +3967,12 @@ function useSelectedSession(){
     });
     localStorage.setItem(NADI_KEY, JSON.stringify(rows));
   }
-window.saveNadiStateDebounced = window.saveNadiStateDebounced || function(){
+function saveNadiStateDebounced(){
   clearTimeout(window.__saveNadiT);
   window.__saveNadiT = setTimeout(saveNadiState, 400);
 }
 
-  window.saveNadiStateDebounced = window.saveNadiStateDebounced || debounce(saveNadiState, 400);
+  const saveNadiStateDebounced = debounce(saveNadiState, 400);
 
   function restoreNadiState(){
     try{
@@ -4043,9 +4043,31 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || function(){
       // Jika voucher dicentang, set takLayak true supaya tidak disimpan sebagai "layak"
       const tak = tr?.querySelector('input[name="takLayak"]');
       if (el.checked && tak) tak.checked = true;
+      const btn = tr?.querySelector('.nadi-daftar');
+      if (btn) {
+        if (el.checked) {
+          // Benarkan klik 'Daftar' untuk laluan voucher walaupun TCA & Staff disabled
+          btn.disabled = false;
+        } else {
+          // Kembalikan logik asal: enable hanya jika 'Layak' ditanda
+          const ly = tr?.querySelector('.nadi-layak');
+          btn.disabled = !(ly && ly.checked);
+        }
+      }
       saveNadiStateDebounced();
     }
     if (el && (el.matches('#nadiContainer input, #nadiContainer textarea'))) {
+      const btn = tr?.querySelector('.nadi-daftar');
+      if (btn) {
+        if (el.checked) {
+          // Benarkan klik 'Daftar' untuk laluan voucher walaupun TCA & Staff disabled
+          btn.disabled = false;
+        } else {
+          // Kembalikan logik asal: enable hanya jika 'Layak' ditanda
+          const ly = tr?.querySelector('.nadi-layak');
+          btn.disabled = !(ly && ly.checked);
+        }
+      }
       saveNadiStateDebounced();
     }
   }, true);
@@ -4264,7 +4286,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || function(){
   cont.addEventListener('change', function(e){
     const t = e.target;
     if (!t.closest('tr')) return;
-    if (!((t.classList.contains('nadi-layak') || t.classList.contains('nadi-taklayak') || t.classList.contains('nadi-voucher') || t.classList.contains('nadi-voucher-date')))) return;
+    if (!(t.classList.contains('nadi-layak') || t.classList.contains('nadi-taklayak') || t.classList.contains('nadi-voucher'))) return;
     const row = t.closest('tr');
 
     // Get checkboxes
@@ -4292,7 +4314,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || function(){
     // Update main button label
     const btn = row.querySelector('.nadi-daftar');
     if (btn) {
-      btn.disabled = !((layak && layak.checked) || (vchr && vchr.checked && vDate && vDate.value));
+      btn.disabled = !(layak && layak.checked);
       if (vchr && vchr.checked) btn.textContent = 'Daftar TCA';
       else btn.textContent = 'Daftar';
     }
